@@ -20,6 +20,7 @@ procps-ng-NEXT
   * top: fix argument parsing quirk resulting in SEGV      Redhat #1450429
   * top: delay interval accepts non-locale radix point     Redhat #1182248
   * top: address a wishlist man page NLS suggestion        Debian #865689
+  * top: fix potential distortion in 'Mem' graph display   issue #64
   * watch: define HOST_NAME_MAX where not defined          Debian #830734
 
 procps-ng-3.3.12
